# LightrayRegistry

./: .gitignore  README.md  README_DELTA.md  pyproject.toml
deploy/: registry-daemon.service
docs/: CODE_REVIEW.md  FEATURES.md  README.md  SEED_PACK.md
matlab/registry_client/: fit_seats_cfg.m  fit_soft_cfg.m  mask_pc_from_job.m  preprocess_seats_apply.m  preprocess_seats_fit.m  read_population.m  read_population_seats.m  registry_load_contract.m  registry_readout.m  registry_sgl_job.m  registry_sgl_search.m  registry_submit.m  seats_param_seed.m  sgl_param_seed.m
mcp/: matlab.json  matlab_mcp.py
patches/: sjm_sparse_schema.patch
registry/: __init__.py  autonomous_loop.py  barrier.py  canon.py  cards.py  cascade.py  cascade_run.py  cli.py  config.py  export.py  ingest.py  ledger.py  predicates.py  rank_transfer_study.py  reducer.py  render.py  spend.py  stage1_sweep.py  store.py  twin_check.py  twin_check2.py
registry/bridges/: __init__.py  matlab.py  vbt.py  vbt_runner.py
registry/daemon/: __init__.py  agents.py  api.py  inbox.py  lock.py  main.py  scheduler.py  writer.py
registry/features/: catalog.py
registry/io/: mt3.py
registry/marketdata/: fetch_binance_futures.py
registry/meta/: decorrelate.py  gate.py  models.py
registry/program2/: exam.py  heartbeat.py  masks.py  mechanisms.json  pool.py  stats.py  tier2_sweep.py
roles/: CLAUDE_operating.md  boundary-agent-v0-SKILL.md  boundary.md  operator.md  shadow.md
seed/: anotherstrategy.json  constants_seed.json  families_programs_seed.json  features_seed.json  tierb_artifacts.json
(+30 files in other folders)
